--- a/apps/public/index.html
+++ b/apps/public/index.html
@@ -10,6 +10,7 @@
 <body>
     <img class="logo" src="./images/idn-logo.png" alt="idn-logo">
      <h1>Belajar Devops</h1>
+     <img class="logo" src="https://upload.wikimedia.org/wikipedia/id/thumb/7/7a/Manchester_United_FC_crest.svg/640px-Manchester_United_FC_crest.svg.png" alt="idn-logo">
      <h1>Mang Ujang Utd</h1>
 </body>
 </html>
