--- a/apps/public/index.html
+++ b/apps/public/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="stylesheet/style.css">
 </head>
 <body>
-    <img class="logo" src="./images/idn-logo.png" alt="idn-logo">
-     <h1>Belajar Devops</h1>
-     <br>
-     <br>
-     <img class="logo" src="https://upload.wikimedia.org/wikipedia/id/thumb/7/7a/Manchester_United_FC_crest.svg/640px-Manchester_United_FC_crest.svg.png" alt="mu-logo" class="center">
-     <h1>Mang Ujang Utd</h1>
+    <div>
+        <img class="logo" src="./images/idn-logo.png" alt="idn-logo">
+        <h1>Belajar Devops</h1>
+        <br>
+        <br>
+        <img class="logo" src="https://upload.wikimedia.org/wikipedia/id/thumb/7/7a/Manchester_United_FC_crest.svg/640px-Manchester_United_FC_crest.svg.png" alt="mu-logo">
+        <h1>Mang Ujang Utd</h1>
+    </div>
 </body>
 </html>
