--- a/apps/public/index.html
+++ b/apps/public/index.html
@@ -15,6 +15,8 @@
         <br>
         <img class="logo" src="https://upload.wikimedia.org/wikipedia/id/thumb/7/7a/Manchester_United_FC_crest.svg/640px-Manchester_United_FC_crest.svg.png" alt="mu-logo">
         <h1>Mang Ujang Utd</h1>
+        <br>
+        <h2>LEARN CI/CD</h2>
     </div>
 </body>
 </html>
